#
# Apokalypse3D - Fast and cache-friendly 3D game engine
# Copyright (C) 2022 Yuriy Zinchenko
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#

CMAKE_MINIMUM_REQUIRED (VERSION 2.8.12)

IF (COMMAND CMAKE_POLICY)
	CMAKE_POLICY (SET CMP0048 NEW)
	CMAKE_POLICY (SET CMP0079 NEW)
ENDIF ()

PROJECT (Apokalypse3D VERSION 0.0.0.0)

SET (CMAKE_CXX_STANDARD 17)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)
SET (CMAKE_CXX_EXTENSIONS OFF)

SET (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET (CMAKE_DEBUG_POSTFIX _d)
SET (CMAKE_RELWITHDEBINFO_POSTFIX _rd)

SET (CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake)

SET (CMAKE_EXPORT_COMPILE_COMMANDS ON)
IF (CMAKE_EXTRA_GENERATOR)
	IF ("${CMAKE_EXTRA_GENERATOR}" STREQUAL "CodeBlocks")
		SET (CMAKE_CODEBLOCKS_EXCLUDE_EXTERNAL_FILES ON)
	ELSEIF ("${CMAKE_EXTRA_GENERATOR}" STREQUAL "CodeLite")
		SET (CMAKE_CODELITE_USE_TARGETS ON)
	ENDIF ()
	IF (NOT "${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
		EXECUTE_PROCESS (COMMAND
			${CMAKE_COMMAND} -E create_symlink
			${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json
			${CMAKE_SOURCE_DIR}/compile_commands.json
		)
	ENDIF ()
ENDIF ()

SET (APOKALYPSE_LIB_TYPE "SHARED" CACHE STRING "Engine library type")
SET_PROPERTY (CACHE APOKALYPSE_LIB_TYPE PROPERTY STRINGS "SHARED" "STATIC")
MARK_AS_ADVANCED (APOKALYPSE_LIB_TYPE)

INCLUDE (Apokalypse3D REQUIRED)
INCLUDE (GenerateExportHeader REQUIRED)

ADD_SUBDIRECTORY (ThirdParty)
ADD_SUBDIRECTORY (Engine)

IF (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
	OPTION (APOKALYPSE_BENCHMARKS "Enable building benchmarks" ON)
	OPTION (APOKALYPSE_SAMPLES "Enable building samples" ON)
	OPTION (APOKALYPSE_TESTS "Enable building tests" ON)
	MARK_AS_ADVANCED (APOKALYPSE_BENCHMARKS)
	MARK_AS_ADVANCED (APOKALYPSE_SAMPLES)
	MARK_AS_ADVANCED (APOKALYPSE_TESTS)
	IF (APOKALYPSE_BENCHMARKS)
		ADD_SUBDIRECTORY (Benchmarks)
	ENDIF ()
	IF (APOKALYPSE_SAMPLES)
		ADD_SUBDIRECTORY (Samples)
	ENDIF ()
	IF (APOKALYPSE_TESTS)
		INCLUDE (CTest REQUIRED)
		ENABLE_TESTING ()
		ADD_SUBDIRECTORY (Tests)
	ENDIF ()
ENDIF ()
